--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,17 @@
+﻿# Server Configuration
+PORT=4000
+NODE_ENV=development
+
+# Database Configuration
+MONGO_URI=mongodb+srv://music:123music786@cluster0.t3xznkg.mongodb.net
+
+# Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=drh8jsrbs
 CLOUDINARY_API_KEY=615513696998496
 CLOUDINARY_API_SECRET=vTqMfwOUz57jruYH2tD8ePEZWF8
-MONGO_URI=mongodb+srv://music:123music786@cluster0.t3xznkg.mongodb.net
+
+# JWT Secret (Change this in production!)
+JWT_SECRET=anyrandomsecret
+
+# CORS Allowed Origins (comma-separated for production)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:5174
