--- a/Music Web Application/package.json
+++ b/Music Web Application/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "musicflow",
+  "name": "musicflow-frontend",
   "private": true,
   "version": "1.0.0",
+  "description": "MusicFlow - Frontend music streaming application",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
     "axios": "^1.12.2",
