--- a/Music Web Application/vercel.json
+++ b/Music Web Application/vercel.json
@@ -1,11 +1,16 @@
 {
   "version": 2,
+  "name": "musicflow-frontend",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "installCommand": "npm install",
   "routes": [
     {
       "handle": "filesystem"
     },
     {
-      "src": "/.*",
+      "src": "/(.*)",
       "dest": "/index.html"
     }
   ]
